fix grammar and add a little padding between list items to make more readable.

--- a/source/_static/theme_overrides.css
+++ b/source/_static/theme_overrides.css
@@ -11,6 +11,10 @@
     overflow: visible;
 }
 
+.rst-content li {
+    padding-top: 4px;
+}
+
 /*
 div[class^="highlight"] pre {
   font-size:10px
